<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/emptyViewLinearLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/emptyStateImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        tools:background="#000000"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/emptyStateTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:textColor="#666666"
        android:textSize="15sp"
        tools:text="@string/emptyTitlePlaceholder"/>

    <TextView
        android:id="@+id/emptyStateContentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:lineSpacingExtra="5.5dp"
        tools:text="@string/emptyContentPlaceholder"/>

    <com.bql.roundview.RoundTextView
        android:id="@+id/emptyStateButton"
        android:layout_width="84dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:tag="skin:tip_text_corner_bg_color:round_view_color"
        android:textColor="#f91c4c"
        android:textSize="14sp"
        app:rv_backgroundColor="#f5f5f5"
        app:rv_backgroundPressColor="#f91c4c"
        app:rv_cornerRadius="4dp"
        app:rv_strokeColor="#f91c4c"
        app:rv_strokeWidth="0.5dp"
        app:rv_textPressColor="#ffffff"
        tools:text="@string/errorButtonPlaceHolder"/>
</LinearLayout>
